--- a/src/components/Table/Table.scss
+++ b/src/components/Table/Table.scss
@@ -10,6 +10,14 @@
     background-color: orange;
 }
 
+.left-th {
+    display: table-cell;
+    vertical-align: inherit;
+    font-weight: bold;
+    text-align: right;
+    border: none;
+}
+
 .current_pointer {
     background-color: black;
     color: white;
